refactor (bestsales): add default date value for best sales